--- a/styles.css
+++ b/styles.css
@@ -158,6 +158,64 @@ input[type=date]::-webkit-calendar-picker-indicator {
     font-size: 14px;
 }
 
+.field__range-field {
+    margin-left: 15px;
+    -webkit-appearance: none;
+    position: relative;
+    width: 240px;
+    height: 6px;
+    background: linear-gradient(90deg, #a3ca4c 60%, #1e1f22 60%);
+    outline: none;
+    border: 0.5px solid #ffffff;
+    -webkit-transition: 0.2s;
+    transition: opacity 0.2s;
+    border-radius: 4px;
+    box-shadow:0px 0px 4px 1px black;
+}
+
+.field__range-field:before {
+    content: '1 тыс. руб.';
+    position: absolute;
+    top: 10px;
+    font-family: Verdana;
+    font-style: italic;
+    font-size: 10px;
+    color: #676767;
+}
+
+.field__range-field:after {
+    content: '3 000 000';
+    position: absolute;
+    top: 10px;
+    right: 0;
+    font-family: Verdana;
+    font-style: italic;
+    font-size: 10px;
+    color: #676767;
+}
+
+/*For Chrome*/
+.field__range-field::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 9px;
+    height: 9px;
+    border: 1px solid #a7a7a7;
+    border-radius: 50%;
+    background: radial-gradient(#ffff, #bbbbbb);
+    cursor: pointer;
+}
+
+/*For Mozilla*/
+.field__range-field::-moz-range-thumb {
+    width: 9px;
+    height: 9px;
+    border: 1px solid #a7a7a7;
+    border-radius: 50%;
+    background: radial-gradient(#ffff, #bbbbbb);
+    cursor: pointer;
+}
+
 .field__radioname {
     display: inline-block;
     margin: 0;
